# torchql

./: .gitignore  Doxyfile  LICENSE  README.md  genindex.html  index.html  installation.html  objects.inv  pyproject.toml  query.html  searchindex.js
_sources/: installation.md
docs/source/: conf.py  database.rst  index.rst  table.rst
tests/: test_database.py  test_query.py  test_table.py  tql_tests.py
torchql/: __init__.py  database.py  database_lazy.py  query.py  table.py  table_lazy.py  utils.py
torchql/sqrl/: __init__.py  sqr.py  sqrl.py
